2005-01-12  Tom Tromey  <tromey@redhat.com>

	Initial checkin to GCC:
	* .cvsignore: Emptied.
	* configure.ac: Use AM_MAINTAINER_MODE.
	* aclocal.m4, Makefile.in, config.h.in, configure: New files.
	* acinclude.m4: New file.

2005-01-12  Tom Tromey  <tromey@redhat.com>

	* bytecode/signature.cc (parse_actual_type_arguments): Use a
	model_forwarding_owned.

2005-01-10  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (handle_inc_dec): Narrow value before
	storing.

2005-01-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::handler): Documented.

	* bytecode/generate.cc (add_exception_handler): Push new handler
	on front of list.

	* bytecode/generate.cc (emit_null_pointer_check): Handle IGNORE
	case.

	* bytecode/generate.cc (visit_throw): Don't emit cleanups.
	(visit_assert): Removed old comment.

	* bytecode/generate.hh (bytecode_generator::handle_invocation):
	Updated.
	(bytecode_generator::emit_null_pointer_check): Declare.
	* bytecode/generate.cc (emit_null_pointer_check): New method.
	(visit_new): Use it.
	(handle_invocation): Added null_check_semantics argument.
	(visit_super_invocation): Updated.
	(visit_this_invocation): Likewise.
	(visit_field_ref): Use emit_null_pointer_check.
	* model/invoke.hh (model_invocation_base::get_expression): New
	method.

	* model/fieldref.cc (resolve): Fold qualifying expression.

	* model/invoke.cc (handle_resolve): Fold qualifying expression.

	* bytecode/generate.cc (visit_conditional): Only reduce stack
	when target is not IGNORE.

	* bytecode/generate.cc (handle_inc_dec): Don't use iinc for types
	other than 'int'.  Properly narrow result in narrow integer case.

2005-01-08  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::finally_creator):
	New class.
	(bytecode_generator::finally_handler): New struct.
	(bytecode_generator::finally_stack_element_type): Removed.
	(bytecode_generator::fstackt): Updated.